tests/dataset/tpc-ds/compiler/c/q14.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static double _avg_float(list_float v) {
  if (v.len == 0)
    return 0;
  double sum = 0;
  for (int i = 0; i < v.len; i++)
    sum += v.data[i];
  return sum / v.len;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct StoreSale StoreSale;
typedef struct CatalogSale CatalogSale;
typedef struct WebSale WebSale;
typedef struct Item Item;
typedef struct DateDim DateDim;

typedef struct {
  const char *channel;
  int i_brand_id;
  int i_class_id;
  int i_category_id;
  double sales;
  int number_sales;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ss_item_sk;
  double ss_list_price;
  int ss_quantity;
  int ss_sold_date_sk;
} store_sale_t;

typedef struct {
  int cs_item_sk;
  double cs_list_price;
  int cs_quantity;
  int cs_sold_date_sk;
} catalog_sale_t;

typedef struct {
  int ws_item_sk;
  double ws_list_price;
  int ws_quantity;
  int ws_sold_date_sk;
} web_sale_t;

typedef struct {
  int i_item_sk;
  int i_brand_id;
  int i_class_id;
  int i_category_id;
} item_t;

typedef struct {
  int d_date_sk;
  int d_year;
  int d_moy;
} date_dim_t;

typedef struct {
  int ss_item_sk;
} cross_item_t;
typedef struct {
  int len;
  cross_item_t *data;
} cross_item_list_t;
cross_item_list_t create_cross_item_list(int len) {
  cross_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(cross_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *channel;
  double sales;
  int number_sales;
} store_filtered_item_t;
typedef struct {
  int len;
  store_filtered_item_t *data;
} store_filtered_item_list_t;
store_filtered_item_list_t create_store_filtered_item_list(int len) {
  store_filtered_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_filtered_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int brand_id;
  int class_id;
  int category_id;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *channel;
  int i_brand_id;
  int i_class_id;
  int i_category_id;
  double sales;
  int number_sales;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct StoreSale {
  int ss_item_sk;
  double ss_list_price;
  int ss_quantity;
  int ss_sold_date_sk;
} StoreSale;
typedef struct {
  int len;
  store_sale_t *data;
} store_sale_list_t;
store_sale_list_t create_store_sale_list(int len) {
  store_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct CatalogSale {
  int cs_item_sk;
  double cs_list_price;
  int cs_quantity;
  int cs_sold_date_sk;
} CatalogSale;
typedef struct {
  int len;
  catalog_sale_t *data;
} catalog_sale_list_t;
catalog_sale_list_t create_catalog_sale_list(int len) {
  catalog_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(catalog_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct WebSale {
  int ws_item_sk;
  double ws_list_price;
  int ws_quantity;
  int ws_sold_date_sk;
} WebSale;
typedef struct {
  int len;
  web_sale_t *data;
} web_sale_list_t;
web_sale_list_t create_web_sale_list(int len) {
  web_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(web_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct Item {
  int i_item_sk;
  int i_brand_id;
  int i_class_id;
  int i_category_id;
} Item;
typedef struct {
  int len;
  item_t *data;
} item_list_t;
item_list_t create_item_list(int len) {
  item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct DateDim {
  int d_date_sk;
  int d_year;
  int d_moy;
} DateDim;
typedef struct {
  int len;
  date_dim_t *data;
} date_dim_list_t;
date_dim_list_t create_date_dim_list(int len) {
  date_dim_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(date_dim_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q14_cross_channel_result;
static void test_TPCDS_Q14_cross_channel() {
  tmp1_t tmp1[] = {(tmp1_t){.channel = "store",
                            .i_brand_id = 1,
                            .i_class_id = 1,
                            .i_category_id = 1,
                            .sales = 60.0,
                            .number_sales = 1}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q14_cross_channel_result.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q14_cross_channel_result.len; i3++) {
      if (test_TPCDS_Q14_cross_channel_result.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  store_sale_t store_sales[] = {(store_sale_t){.ss_item_sk = 1,
                                               .ss_list_price = 10.0,
                                               .ss_quantity = 2,
                                               .ss_sold_date_sk = 1},
                                (store_sale_t){.ss_item_sk = 1,
                                               .ss_list_price = 20.0,
                                               .ss_quantity = 3,
                                               .ss_sold_date_sk = 2}};
  int store_sales_len = sizeof(store_sales) / sizeof(store_sales[0]);
  catalog_sale_t catalog_sales[] = {(catalog_sale_t){.cs_item_sk = 1,
                                                     .cs_list_price = 10.0,
                                                     .cs_quantity = 2,
                                                     .cs_sold_date_sk = 1}};
  int catalog_sales_len = sizeof(catalog_sales) / sizeof(catalog_sales[0]);
  web_sale_t web_sales[] = {(web_sale_t){.ws_item_sk = 1,
                                         .ws_list_price = 30.0,
                                         .ws_quantity = 1,
                                         .ws_sold_date_sk = 1}};
  int web_sales_len = sizeof(web_sales) / sizeof(web_sales[0]);
  item_t item[] = {(item_t){
      .i_item_sk = 1, .i_brand_id = 1, .i_class_id = 1, .i_category_id = 1}};
  int item_len = sizeof(item) / sizeof(item[0]);
  date_dim_t date_dim[] = {
      (date_dim_t){.d_date_sk = 1, .d_year = 2000, .d_moy = 12},
      (date_dim_t){.d_date_sk = 2, .d_year = 2002, .d_moy = 11}};
  int date_dim_len = sizeof(date_dim) / sizeof(date_dim[0]);
  cross_item_t cross_items[] = {(cross_item_t){.ss_item_sk = 1}};
  int cross_items_len = sizeof(cross_items) / sizeof(cross_items[0]);
  list_float avg_sales = list_float_create(3);
  avg_sales.data[0] = 20.0;
  avg_sales.data[1] = 20.0;
  avg_sales.data[2] = 30.0;
  double avg_sales = _avg_float(avg_sales);
  list_int tmp4 = list_int_create(cross_items_len);
  int tmp5 = 0;
  for (int tmp6 = 0; tmp6 < cross_items_len; tmp6++) {
    cross_item_t ci = cross_items[tmp6];
    tmp4.data[tmp5] = ci.ss_item_sk;
    tmp5++;
  }
  tmp4.len = tmp5;
  store_filtered_item_t store_filtered[10];
  int store_filtered_len = 0;
  for (int i7 = 0; i7 < store_sales_len; i7++) {
    store_sale_t ss = store_sales[i7];
    for (int i8 = 0; i8 < date_dim_len; i8++) {
      date_dim_t d = date_dim[i8];
      if (!(ss.ss_sold_date_sk == d.d_date_sk && d.d_year == 2002 &&
            d.d_moy == 11)) {
        continue;
      }
      if (!(ss.ss_item_sk in(tmp4))) {
        continue;
      }
      int tmp9 = -1;
      for (int i10 = 0; i10 < store_filtered_len; i10++) {
        if (strcmp(store_filtered[i10].name,
                   (tmp_item_t){
                       .brand_id = 1, .class_id = 1, .category_id = 1}) == 0) {
          tmp9 = i10;
          break;
        }
      }
      if (tmp9 == -1) {
        store_filtered[store_filtered_len].name =
            (tmp_item_t){.brand_id = 1, .class_id = 1, .category_id = 1};
        store_filtered[store_filtered_len].count = 1;
        tmp9 = store_filtered_len;
        store_filtered_len++;
      } else {
        store_filtered[tmp9].count++;
      }
    }
  }
  result_item_list_t tmp11 = create_result_item_list(store_filtered_len);
  int tmp12 = 0;
  for (int tmp13 = 0; tmp13 < store_filtered_len; tmp13++) {
    store_filtered_item_t r = store_filtered[tmp13];
    if (!(r.sales > avg_sales)) {
      continue;
    }
    tmp11.data[tmp12] = (result_item_t){.channel = r.channel,
                                        .i_brand_id = 1,
                                        .i_class_id = 1,
                                        .i_category_id = 1,
                                        .sales = r.sales,
                                        .number_sales = r.number_sales};
    tmp12++;
  }
  tmp11.len = tmp12;
  result_item_list_t result = tmp11;
  printf("[");
  for (int i14 = 0; i14 < result.len; i14++) {
    if (i14 > 0)
      printf(",");
    result_item_t it = result.data[i14];
    printf("{");
    _json_string("channel");
    printf(":");
    _json_string(it.channel);
    printf(",");
    _json_string("i_brand_id");
    printf(":");
    _json_int(it.i_brand_id);
    printf(",");
    _json_string("i_class_id");
    printf(":");
    _json_int(it.i_class_id);
    printf(",");
    _json_string("i_category_id");
    printf(":");
    _json_int(it.i_category_id);
    printf(",");
    _json_string("sales");
    printf(":");
    _json_float(it.sales);
    printf(",");
    _json_string("number_sales");
    printf(":");
    _json_int(it.number_sales);
    printf("}");
  }
  printf("]");
  test_TPCDS_Q14_cross_channel_result = result;
  test_TPCDS_Q14_cross_channel();
  free(tmp4.data);
  free(result.data);
  return 0;
}
